Added some methods for the logic and its tests

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
     "prettier/prettier": "error",
     "class-methods-use-this": "off",
     "no-param-reassign": "off",
+    "no-plusplus": "off",
     "camelcase": "off",
     "no-unused-vars": ["error", { "argsIgnorePattern": "next" }],
     "jest/no-disabled-tests": "warn",
