Adding more documentation. Changed .env.example. Fixed bug in sqlite folder

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,26 @@
 PORT=3333
 NODE_ENV=development
 
-# Auth
-
-APP_SECRET=
-
-# Database
-
-
+[development]
+# Sqlite database for development
 DB_HOST=localhost
-DB_USER=root
-DB_PASS=
+DB_USER=igor
+DB_PASS=igor
 DB_NAME=chess
+
+[test]
+# Sqlite database for testing
+DB_HOST=localhost
+DB_USER=igor
+DB_PASS=igor
+DB_NAME=chess
+
+[production]
+# Postgres database for production
+DB_HOST=
+DB_USER=
+DB_PASS=
+DB_NAME=
+# DSN provided by Sentry.io
+SENTRY_DSN=
+
